# leetcode

leetcode/DCC/1351-count-negative-numbers-in-a-sorted-matrix/: bruteforce.py
personal-projects/axonlotl/: .env.example  README.md  package-lock.json  package.json  test-recovery.sh
personal-projects/axonlotl/agents/: AGENTS.md
personal-projects/axonlotl/frontend/: index.html
personal-projects/axonlotl/src/: chaos-engine.js  config.js  degradation-manager.js  demo-scenarios.js  gemini-client.js  health-monitor.js  managed-agent-setup.js  managed-agent.js  middleware-interceptor.js  network-state.js  orchestrator.js  plasticity-tracker.js  route-engine.js  server.js  worker-agents.js
personal-projects/pheromone/: .env.example  .gitignore  .pre-commit-config.yaml  STATE.md  docker-compose.yml
personal-projects/pheromone/backend/: README.md  mock_vllm_server.py  pyproject.toml  settings.py
personal-projects/pheromone/backend/agents/: ops_agent.py
personal-projects/pheromone/backend/api/: main.py
personal-projects/pheromone/backend/db/: ctes.py  models.py  repositories.py
personal-projects/pheromone/backend/db/migrations/: README.md  alembic.ini  env.py  script.py.mako
personal-projects/pheromone/backend/db/migrations/versions/: 20260508_000001_phase1_initial_schema.py
personal-projects/pheromone/backend/tests/: conftest.py  test_phase1_alembic.py  test_phase1_concurrent_inserts.py  test_phase1_cte_blast_radius.py  test_phase1_cte_inventory_composition.py  test_phase1_fixture_inserts.py  test_phase1_repositories.py
(+30 files in other folders)
