[project]
name = "pheromone-backend"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.115",
  "pydantic~=2.9",
  "pydantic-settings~=2.4",
  "SQLAlchemy~=2.0",
  "alembic~=1.13",
  "langgraph~=0.2",
  "langchain~=0.3",
  "psycopg[binary]~=3.2",
  "httpx~=0.27",
  "python-dotenv~=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3",
  "ruff",
  "black",
  "mypy",
  "testcontainers[postgresql]~=4.7",
  "pytest-asyncio~=0.23",
  "Faker~=40.15",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
